Bug 1127107 - The presence of hyphens:auto and/or text-transform:capitalize should not affect no-wrap behavior. r=dholbert